--- a/mcqs_generator/src/App.css
+++ b/mcqs_generator/src/App.css
@@ -1,38 +1,83 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: Arial, sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f0f8ff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #87cefa;
+  padding: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+nav a {
+  margin: 0 1em;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content h1 {
+  font-size: 2em;
+  margin: 1em 0;
+}
+
+.content p {
+  font-size: 1.2em;
+  margin: 0.5em 0;
+}
+
+textarea {
+  width: 60%;
+  height: 100px;
+  margin: 1em 0;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.submit-button,
+.import-button {
+  background-color: #87cefa;
+  border: none;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+  margin: 0.5em 0;
+}
+
+.App-footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #f0f8ff;
+  padding: 1em;
+}
+
+.social-icons a {
+  margin: 0 0.5em;
+  text-decoration: none;
+  color: black;
 }
