--- a/mcqs_generator/src/MCQPage.css
+++ b/mcqs_generator/src/MCQPage.css
@@ -16,7 +16,7 @@
     justify-content: space-between;
     width: 100%;
     background-color: #007bff;
-    padding: 1rem;
+    padding: 1.3em 1em;
     color: white;
   }
   
@@ -49,6 +49,10 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 2rem;
+  }
+
+  .mcq-page .timer {
+    font-size: 1em;
   }
   
   .mcq-page .question-container {
