--- a/mcqs_generator/src/MCQPage.css
+++ b/mcqs_generator/src/MCQPage.css
@@ -5,12 +5,10 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    
     font-size: calc(10px + 2vmin);
     padding-bottom: 2rem;
   }
 
-  
   .mcq-page .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -83,8 +81,21 @@
   .mcq-page .option {
     margin: 0.25rem 0;
     font-size: 0.8em;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
   }
   
+  .mcq-page .option.correct {
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+  }
+
+  .mcq-page .option.incorrect {
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+  }
+
   .mcq-page button[type="submit"] {
     background-color: #007bff;
     color: white;
