--- a/mcqs_generator/src/MCQPage.css
+++ b/mcqs_generator/src/MCQPage.css
@@ -8,7 +8,7 @@
     font-size: calc(10px + 2vmin);
     padding-bottom: 2rem;
   }
-
+  
   .mcq-page .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -36,8 +36,8 @@
     text-decoration: underline;
   }
   
- /* Content Styles */
-.mcq-page .content {
+  /* Content Styles */
+  .mcq-page .content {
     text-align: left;
     width: 80%;
     max-width: 800px;
@@ -48,7 +48,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 2rem;
   }
-
+  
   .mcq-page .timer {
     font-size: 1em;
   }
@@ -58,7 +58,7 @@
     padding: 1rem 0;
     margin: 1rem 0;
   }
-
+  
   .mcq-page h1 {
     font-size: 2em;  /* Adjust heading size */
   }
@@ -90,12 +90,12 @@
     background-color: #d4edda;
     border-color: #c3e6cb;
   }
-
+  
   .mcq-page .option.incorrect {
     background-color: #f8d7da;
     border-color: #f5c6cb;
   }
-
+  
   .mcq-page button[type="submit"] {
     background-color: #007bff;
     color: white;
@@ -111,6 +111,23 @@
     background-color: #0056b3;
   }
   
+  .home-button {
+    background-color: #007bff;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 1rem;
+    align-self: center;
+    margin-bottom: 1rem;
+  }
+  
+  .home-button:hover {
+    background-color: #0056b3;
+  }
+  
   /* Footer Styles */
   .mcq-page .App-footer {
     display: flex;
@@ -120,22 +137,5 @@
     background-color: #ffffff;
     padding: 1em;
     flex-shrink: 0;
-    border-top: 0.1px solid #999;
-  }
-  
-  .mcq-page .App-footer p {
-    font-size: 0.8em;
-    margin: 0;
-  }
-  
-  .mcq-page .social-icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  
-  .mcq-page .social-media-logo {
-    width: 15px;
-    height: auto;
-    margin: 0 0.3em;
+    border-top: 0.1
   }
