--- a/mcqs_generator/src/ResultsPage.css
+++ b/mcqs_generator/src/ResultsPage.css
@@ -1,84 +1,97 @@
 /* ResultsPage.css */
 
+/* Global reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 /* General Styles */
 .ResultsPage {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Ensure the page takes the full height of the viewport */
-  }
-  
-  /* Header Styles */
-  .ResultsPage .App-header {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    flex: 0 1 auto; /* Ensure header does not grow or shrink unexpectedly */
-  }
-  
-  .ResultsPage .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: #007bff;
-    padding: 1.3em 1em;
-    color: white;
-  }
-  
-  .ResultsPage .logo {
-    font-size: 1.3em;
-    font-weight: bold;
-    margin: 0 1em;
-  }
-  
-  .ResultsPage nav a {
-    margin-left: 1em;
-    margin-right: 1em;
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    font-size: 0.8em;
-  }
-  
-  .ResultsPage nav a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Content Styles */
-  .ResultsPage .content {
-    flex: 1 0 auto; /* Allow content to grow and take up available space */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
-  }
-  
-  /* Footer Styles */
-  .ResultsPage .App-footer {
-    display: flex;
-    justify-content: space-between;
-    width: 98%;
-    margin: 0 auto;
-    background-color: #ffffff;
-    padding: 1em;
-    flex-shrink: 0; /* Prevent footer from shrinking */
-    border-top: 0.1px solid #999; /* Added border-top to separate footer from content */
-  }
-  
-  .ResultsPage .App-footer p {
-    font-size: 0.8em;
-    margin: 0;
-  }
-  
-  .ResultsPage .social-icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  
-  .ResultsPage .social-media-logo {
-    width: 15px;
-    height: auto;
-    margin: 0 0.3em;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensure the page takes the full height of the viewport */
+}
+
+/* Header Styles */
+.ResultsPage .App-header {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  flex: 1; /* Ensure header does not grow or shrink unexpectedly */
+}
+
+.ResultsPage .nav-bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #8bdcff;
+  padding: 1.3em 1em;
+  color: black;
+}
+
+.ResultsPage .logo {
+  font-size: 1.3em;
+  font-weight: bold;
+  margin: 0 1em;
+}
+
+.ResultsPage nav a {
+  margin-left: 1em;
+  margin-right: 1em;
+  text-decoration: none;
+  color: black;
+  font-weight: 550;
+  font-size: 0.8em;
+}
+
+.ResultsPage nav a:hover {
+  text-decoration: underline;
+}
+
+/* Content Styles */
+.ResultsPage .content {
+  flex: 1 0 auto; /* Allow content to grow and take up available space */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+
+/* Footer Styles */
+.ResultsPage .App-footer {
+  display: flex;
+  justify-content: space-between;
+  width: 98%;
+  margin: 0 auto;
+  background-color: #ffffff;
+  padding: 1em;
+  flex-shrink: 0; /* Prevent footer from shrinking */
+  border-top: 0.1px solid #999; /* Added border-top to separate footer from content */
+}
+
+.ResultsPage .App-footer p {
+  font-size: 0.8em;
+  margin: 0;
+}
+
+.ResultsPage .social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.ResultsPage .social-media-logo {
+  width: 15px;
+  height: auto;
+  margin: 0 0.3em;
+}
