--- a/mcqs_generator/src/ResultsPage.css
+++ b/mcqs_generator/src/ResultsPage.css
@@ -67,6 +67,21 @@ body {
   padding: 1em;
 }
 
+.ResultsPage .handle-answers-button,
+.ResultsPage .home-button {
+  background-color: #ffffff;
+  width: 300px;
+  border: none;
+  padding: 0.8em 1em;
+  border: 1.5px solid #1a91ff;
+  border-radius: 0px;
+  font-size: 0.8em;
+  font-weight: normal;
+  color: #1a91ff;
+  cursor: pointer;
+  margin: 0.5em 0;
+}
+
 /* Footer Styles */
 .ResultsPage .App-footer {
   display: flex;
