--- a/mcqs_generator/src/ResultsPage.css
+++ b/mcqs_generator/src/ResultsPage.css
@@ -64,7 +64,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
+  height: 200px;
 }
 
 .ResultsPage .content-results {
